<?xml version="1.0"?>
<package format="2">
  <name>rohand</name>
  <version>1.0.0</version>
  <description>ROS 1 package for ROHand</description>

  <maintainer email="hebin7611@hotmail.com">He Bin</maintainer>
  <license>MIT</license>

  <!-- 依赖关系 -->
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <!-- 构建工具依赖 -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- 测试依赖 -->
  <test_depend>rostest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- ROS 1 不需要 export 部分 -->
</package>
